--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <link href="css/styles.css" rel="stylesheet" type="text/css">
       <script   src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
       <script src="js/scripts.js"></script>
-      <title>A fantastical adventure</title>
+      <title>A fantastical adventure hello</title>
    </head>
    <body>
       <div class="container">
